--- a/tic-tac-toe/WebApp/Pages/Game.cshtml
+++ b/tic-tac-toe/WebApp/Pages/Game.cshtml
@@ -9,7 +9,7 @@
     <style>
         .board {
             display: grid;
-            grid-template-columns: repeat(@Model.ViewModel.DimX, 50px);
+            grid-template-columns: repeat(@Model.DimX, 50px);
             grid-gap: 5px;
             margin: 20px auto;
             width: max-content;
@@ -24,7 +24,7 @@
             <h3>@(Model.GameInstance.IsXTurn ? "X " : "O ") turn</h3>
         </div>
         <div class="col">
-            @if (Model.ViewModel.GameType == "Player vs AI" && !Model.GameInstance.IsXTurn || Model.ViewModel.GameType == "AI vs AI")
+            @if (Model.GameType == "Player vs AI" && !Model.GameInstance.IsXTurn || Model.GameType == "AI vs AI")
             {
                 <form method="post" asp-page-handler="AiMove">
                     <button type="submit" class="btn btn-success m-2"
@@ -78,12 +78,12 @@
         <div class="col-sm">
             <form method="post" asp-page-handler="SetPiece">
                 <div class="board">
-                    @for (int y = 0; y < Model.ViewModel.DimY; y++)
+                    @for (int y = 0; y < Model.DimY; y++)
                     {
-                        for (int x = 0; x < Model.ViewModel.DimX; x++)
+                        for (int x = 0; x < Model.DimX; x++)
                         {
-                            var isSmallBoard = x >= Model.ViewModel.SmallBoardStartX && x < Model.ViewModel.SmallBoardEndX &&
-                                               y >= Model.ViewModel.SmallBoardStartY && y < Model.ViewModel.SmallBoardEndY;
+                            var isSmallBoard = x >= Model.SmallBoardStartX && x < Model.SmallBoardEndX &&
+                                               y >= Model.SmallBoardStartY && y < Model.SmallBoardEndY;
                             var cssClass = isSmallBoard ? "small-board" : "regular-board";
                             <button type="submit" name="x" value="@x"
                                     formaction="/Game?handler=SetPiece&x=@x&y=@y&CurrentGameName=@Model.CurrentGameName"
@@ -151,14 +151,6 @@
         </div>
     </div>
 </div>
-
-@if (TempData["WinMessage"] != null)
-{
-    <script>
-        alert("@TempData["WinMessage"]");
-        window.location.href = `/`;
-    </script>
-}
 
 </body>
 </html>
