--- a/tic-tac-toe/WebApp/Pages/Game.cshtml
+++ b/tic-tac-toe/WebApp/Pages/Game.cshtml
@@ -103,7 +103,7 @@
                     <div class="row">
                         <h3 class="text-center">Move grid</h3>
                         <div class="text-center">
-                            <button class="btn btn-light" asp-page-handler="MoveGrid" asp-route-direction="up_left" asp-route-CurrentGameName="@Model.CurrentGameName">
+                            <button class="btn btn-light" asp-route-direction="up_left" asp-route-CurrentGameName="@Model.CurrentGameName">
                                 <i class="bi-arrow-up-left-square-fill" style="font-size: 40px; color: #0d6efd"></i>
                             </button>
                             <button class="btn btn-light" asp-page-handler="MoveGrid" asp-route-direction="up" asp-route-CurrentGameName="@Model.CurrentGameName">
